tests/expected_output/default/expression_not_assignable.txt
tests/extracted_compile_time_errors/expression_not_assignable.c:3:23: error: expression is not assignable
        if (argc = 1 || argc = 2) {
                   ~~~~~~~~~ ^
dcc explanation: You are using =  <deleted-value>
Reminder: you use = to assign to a variable.
You use == to compare values.		
		
